hard-code new css height for flex box, temp fix

--- a/arches/app/templates/views/search/search-base-manager.htm
+++ b/arches/app/templates/views/search/search-base-manager.htm
@@ -40,7 +40,7 @@
     </div>
 
     <div class="flex">
-        <div class="flex">
+        <div class="flex" style="height: calc(100vh - 110px)">
 
             <!--Form Listing -->
             <div class="left-column-crud-container search-control-container" data-bind="with: searchResults, css: { 'slide': !resultsExpanded() }">
