--- a/arches/app/templates/views/graph/function-manager.htm
+++ b/arches/app/templates/views/graph/function-manager.htm
@@ -32,7 +32,7 @@ along with this program. If not, see <http://www.gnu.org/licenses/>.
 {% endblock graph_header_buttons %}
 
 {% block content %}
-<div class="flex">
+<div class="flex" style="height: calc(100vh - 110px)">
 
     <!--Form Listing -->
     <div class="left-column-crud-container form-list">
