--- a/arches/app/templates/views/resource/editor.htm
+++ b/arches/app/templates/views/resource/editor.htm
@@ -29,7 +29,7 @@ along with this program. If not, see <http://www.gnu.org/licenses/>.
 {% endblock graph_header_buttons %}
 
 {% block content %}
-<div class="flex relative" data-bind="visible: !openRelatedResources()" style="display:none;">
+<div class="flex relative" data-bind="visible: !openRelatedResources()" style="display:none; height: calc(100vh - 110px)">
 
     <!--Form Listing -->
     <div class="left-column-crud-container form-list no-print" data-bind="with: formList">
