--- a/arches/app/templates/views/system-settings.htm
+++ b/arches/app/templates/views/system-settings.htm
@@ -24,7 +24,7 @@ along with this program. If not, see <http://www.gnu.org/licenses/>.
 {% endblock graph_header_title %}
 
 {% block content %}
-<div class="flex relative">
+<div class="flex relative" style="height: calc(100vh - 110px)">
 
     <!--Form Listing -->
     <div class="left-column-crud-container form-list" data-bind="with: formList">
