--- a/arches/app/templates/views/search/search-base-manager.htm
+++ b/arches/app/templates/views/search/search-base-manager.htm
@@ -29,12 +29,14 @@
                     <i class="fa fa-check-circle-o"></i>
                     <p>{% trans 'Advanced' %}</p>
                 </button>
+                {% comment %}
                 {% if user|can_read_resource_instance %}
                 <button class="btn search-type-btn relative" data-bind="css: {'active': selectedTab() === relatedResourcesManager}, click: function(){selectedTab(relatedResourcesManager)}">
                     <i class="fa fa-code-fork"></i>
                     <p>{% trans 'Related' %}</p>
                 </button>
                 {% endif %}
+                {% endcomment %}
             </div>
         </div>
     </div>
@@ -48,6 +50,7 @@
                 <h3 class="search-title" data-bind="text: '{% trans 'Results: ' %}' + total()"></h3>
                 <div id="search-results-container">
                     <div class="search-inline-filters">
+                    {% comment %}
                     {% if user_is_reviewer %}
                     <div class="resource-selector-button pull-right" data-bind="with:$parent.provisionalFilter">
                         <div class="btn-group btn-group-xs">
@@ -62,6 +65,7 @@
                         </div>
                     </div>
                     {% endif %}
+                    {% endcomment %}
                     <div class="resource-selector-button pull-right" data-bind="with:$parent.resourceTypeFilter">
                         <div class="btn-group btn-group-xs">
                             <button class="btn btn-primary btn-active-primary dropdown-toggle" data-toggle="dropdown" type="button" aria-expanded="true"> {% trans "Select..." %} <i class="dropdown-caret fa fa-caret-down"></i>
@@ -96,11 +100,13 @@
                     <div class="tab-pane" data-bind="css: {'active': selectedTab() === advancedFilter}, with: advancedFilter">
                         {% include 'views/search/advanced-search.htm' %}
                     </div>
+                    {% comment %}
                     <!-- ko if: selectedTab() === relatedResourcesManager -->
                     <div class="tab-pane" data-bind="css: {'active': selectedTab() === relatedResourcesManager}, with: relatedResourcesManager">
                         {% include 'views/resource/related-resources/related-resources-manager.htm' %}
                     </div>
                     <!-- /ko -->
+                    {% endcomment %}
                 </div>
             </div>
         </div>
